--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node2fa",
+  "name": "@adriaragonn/node2fa",
   "version": "1.0.0",
   "description": "A simple and robust Two-Factor Authentication (2FA) library for Node.js using TOTP.",
   "license": "MIT",
